[package]
edition = "2021"
name = "tokio-task-manager"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "^1.18", features = ["rt-multi-thread", "sync", "time", "macros"]}
tracing = "^0.1"

[dev-dependencies]
tokio-test = "^0.4"
